[workspace]
members = [
        "axum/axum-basic"
]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.6.20"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
miwa = { git="https://github.com/miwa-rs/miwa.git" }
miwa_web = { git="https://github.com/miwa-rs/miwa-web.git" }
tracing-subscriber = "0.3.16"
