[workspace]
members = [
        "axum/axum-basic"
]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.7.2"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
miwa = { git="https://github.com/miwa-rs/miwa.git" }
miwa-axum = { git="https://github.com/miwa-rs/miwa-web.git" }
tracing-subscriber = "0.3.16"
serde={version = "1", features= ["derive"]}
serde_json={version = "1"}
async-trait = "0.1.68"
uuid = { version = "1.6.1", features = ["v4", "serde"]}
thiserror = "1.0.50"
anyhow = "1.0.75"
