[package]
name = "axum-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miwa = { workspace= true }
miwa-axum = { workspace= true }
axum = { workspace= true }
tokio = {workspace = true}
tracing-subscriber = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
async-trait = {workspace = true}
uuid = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
anyhow = {workspace= true}
